2005-04-12 00:08 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridNodeCountByPartition) added method to count
	the number of nodes assigned to each partition on the current
	partition. this is intended to allow for coloring of partitions
	to allow for concurrent boundary cell swapping.
	* src/gridfortran.c (gridnodecountbypartition_) exposed
	gridmpi:gridNodeCountByPartition.

2005-04-09 21:07 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am (libMesherX_pg.a) added to profile profileNative.

2005-04-05 00:07 Mike Park  <mike.park@nasa.gov>

	* src/profine_main.c (main) started tp create a driver to profile
	the speen of the code (especially parallel border regions).
	Not working yet.
	* src/Makefile.am (profileNative) added to CAPRI compile.

2005-03-25 10:43 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelswap_) added all ghost two face
	cells to plan. Activated ghost plan be default.
	Revert by setting `swap_the_fast_new_way' to FALSE.

2005-03-25 08:51 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMirrorNodeAboutY0) Fixed calculation of new node
	Y location when Y0 is non zero. This is to fix the BWB mirror
	case.

2005-03-24 16:24 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridCopyAboutY0, gridMirrorNodeAboutY0) Generalized
	routine to work for cases that have global node and cell ID's as
	well as cases that do not have global ID's.

2005-03-24 16:17 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridRemoveCellAndQueue) To increase the speed of
	parallel adaptation runs a removed cell is only queued if it has a
	ghost node. gridRemoveFaceAndQueue and gridRemoveEdgeAndQueue
	already do this. Unfortunitly this did not drastically affect the
	performace of test cases.

2005-03-22 16:00 Mike Park  <mike.park@nasa.gov>

	* src/MesherX.c (main) fixed the -vgbg option
	* src/MesherX_HLA.c (main) fixed the -vgbg option

2005-03-22 15:55 Mike Park  <mike.park@nasa.gov>
